--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular CDMX y Estado de México | Trámites Urgentes y Placas</title>
+    <title>Gestoría Vehicular CDMX, EdoMex y Morelos 2026 | Alta Placas · Cambio Propietario · Licencias</title>
     <meta name="description"
-        content="Gestoría Vehicular en CDMX y Estado de México. Alta de Placas, Reemplacamiento 2026, Cambio de Propietario y Licencia Permanente. Trámites urgentes y a domicilio.">
+        content="Gestor de Autos: Gestoría Vehicular en CDMX, Estado de México y Morelos. Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente y Refrendo Morelos 2026. Sin filas. 55 3575-7364.">
     <meta name="keywords"
-        content="gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestor de placas edomex, reemplacamiento 2026, alta de placas, licencia permanente cdmx, gestoria en tlalpan, gestoria en naucalpan, gestoria en chalco, gestoria vehicular zona volcanes, gestor de autos">
+        content="gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, alta de placas edomex, alta de placas cdmx, cambio de propietario edomex, cambio de propietario cdmx, reemplacamiento edomex 2026, licencia permanente cdmx, refrendo morelos 2026, gestor de placas, tramites vehiculares sin filas, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-    <!-- Geo Tags for Local SEO (EdoMex & CDMX) -->
+    <!-- Geo Tags for Local SEO (EdoMex, CDMX & Morelos) -->
     <meta name="geo.region" content="MX-MEX">
-    <meta name="geo.placename" content="Estado de México, Ciudad de México">
+    <meta name="geo.placename" content="Estado de México, Ciudad de México, Morelos">
     <meta name="geo.position" content="19.4326;-99.1332">
     <meta name="ICBM" content="19.4326, -99.1332">
 
@@ -41,9 +41,9 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestoría Vehicular CDMX y EdoMex | Gestor de Autos">
+    <meta property="og:title" content="Gestoría Vehicular CDMX, EdoMex y Morelos 2026 | Gestor de Autos">
     <meta property="og:description"
-        content="Expertos en alta de placas, reemplacamiento y licencia permanente en CDMX y Estado de México. Evita filas y multas con nuestro servicio 100% garantizado.">
+        content="Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente y Refrendo Morelos 2026. Sin filas, 100% legal. Llama: 55 3575-7364.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
@@ -739,9 +739,11 @@
                         </div>
 
                         <!-- Licencia Moto EdoMex 4 años -->
-                        <div class="service-item premium-item" style="background: linear-gradient(135deg, #f0fdf4, #dcfce7); border: 2px solid #16a34a;">
+                        <div class="service-item premium-item"
+                            style="background: linear-gradient(135deg, #f0fdf4, #dcfce7); border: 2px solid #16a34a;">
                             <div class="service-header">
-                                <div class="service-icon" style="background: #16a34a; color:white;"><i class="fas fa-motorcycle"></i></div>
+                                <div class="service-icon" style="background: #16a34a; color:white;"><i
+                                        class="fas fa-motorcycle"></i></div>
                                 <div>
                                     <h4>Licencia de Moto &middot; EdoMex &middot; 4 A&ntilde;os</h4>
                                     <small>Vigente &middot; Tipo B SEMOVI &middot; Sin filas</small>
@@ -749,7 +751,10 @@
                             </div>
                             <div style="display:flex; gap:1.5rem; align-items:center; flex-wrap:wrap; margin-top:1rem;">
                                 <div style="flex-shrink:0; width:220px;">
-                                    <img src="assets/images/licencia-moto-edomex.svg" alt="Licencia de motociclista Estado de México 4 años" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.12);" loading="lazy">
+                                    <img src="assets/images/licencia-moto-edomex.svg"
+                                        alt="Licencia de motociclista Estado de México 4 años"
+                                        style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.12);"
+                                        loading="lazy">
                                 </div>
                                 <div style="flex:1; min-width:200px;">
                                     <div class="service-tags" style="margin-bottom:0.75rem;">
@@ -757,10 +762,15 @@
                                         <span class="tag"><i class="fas fa-calendar-alt"></i> 4 A&ntilde;os</span>
                                         <span class="tag"><i class="fas fa-map-marker-alt"></i> EdoMex</span>
                                     </div>
-                                    <p style="font-size:0.88rem; color:#475569; line-height:1.5; margin-bottom:0.75rem;">
-                                        Tramitamos tu <strong>licencia de motociclista en el Estado de M&eacute;xico</strong> con vigencia de 4 a&ntilde;os. 100% legal, sin madrugar. S&oacute;lo env&iacute;a tus docs por WhatsApp.
+                                    <p
+                                        style="font-size:0.88rem; color:#475569; line-height:1.5; margin-bottom:0.75rem;">
+                                        Tramitamos tu <strong>licencia de motociclista en el Estado de
+                                            M&eacute;xico</strong> con vigencia de 4 a&ntilde;os. 100% legal, sin
+                                        madrugar. S&oacute;lo env&iacute;a tus docs por WhatsApp.
                                     </p>
-                                    <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20EdoMex%204%20a%C3%B1os" class="btn btn-whatsapp" target="_blank" style="font-size:0.9rem; padding:0.6rem 1.2rem; display:inline-flex; align-items:center; gap:0.4rem;">
+                                    <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20EdoMex%204%20a%C3%B1os"
+                                        class="btn btn-whatsapp" target="_blank"
+                                        style="font-size:0.9rem; padding:0.6rem 1.2rem; display:inline-flex; align-items:center; gap:0.4rem;">
                                         <i class="fab fa-whatsapp"></i> Cotizar Licencia Moto
                                     </a>
                                 </div>
@@ -768,11 +778,15 @@
                         </div>
 
                         <!-- CTA Licencia Permanente CDMX -->
-                        <div class="service-item" style="border:2px dashed #2563eb; background:#eff6ff; text-align:center;">
+                        <div class="service-item"
+                            style="border:2px dashed #2563eb; background:#eff6ff; text-align:center;">
                             <i class="fas fa-infinity" style="font-size:2rem; color:#2563eb; margin-bottom:0.4rem;"></i>
                             <h4 style="color:#1e3a8a;">Licencia Permanente CDMX &middot; Tipo A</h4>
-                            <p style="font-size:0.85rem; color:#475569; margin:0.4rem 0 1rem;">La que tramitas <strong>una sola vez para toda la vida</strong>. Sin fecha de vencimiento. V&aacute;lida en toda la Rep&uacute;blica.</p>
-                            <a href="licencia-permanente-cdmx.html" class="btn btn-primary" style="font-size:0.9rem; padding:0.6rem 1.4rem;">
+                            <p style="font-size:0.85rem; color:#475569; margin:0.4rem 0 1rem;">La que tramitas
+                                <strong>una sola vez para toda la vida</strong>. Sin fecha de vencimiento. V&aacute;lida
+                                en toda la Rep&uacute;blica.</p>
+                            <a href="licencia-permanente-cdmx.html" class="btn btn-primary"
+                                style="font-size:0.9rem; padding:0.6rem 1.4rem;">
                                 <i class="fas fa-arrow-right"></i> Ver Requisitos y Cotizar
                             </a>
                         </div>
