--- a/alta-de-placas.html
+++ b/alta-de-placas.html
@@ -7,11 +7,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNJCSQXF11"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-BNJCSQXF11');</script>
 
-    <title>Alta de Placas 2026 · EdoMex, CDMX y Morelos | Gestor de Autos</title>
+    <title>Alta de Placas 2026 · EdoMex, CDMX y Morelos | Gestor Vehicular · Placas Sin Filas</title>
     <meta name="description"
-        content="Tramitamos el Alta de Placas en EdoMex, CDMX y Morelos 2026. Auto nuevo, usado o foráneo. Sin filas. Envía tus docs por WhatsApp. Gestor de Autos: 55 3575-7364.">
+        content="Tramitamos el Alta de Placas en EdoMex, CDMX y Morelos 2026. Gestor Vehicular Online. Auto nuevo, usado, moto o foráneo. Sin filas, 100% legal. Consulta REPUVE incluida. 55 3575-7364.">
     <meta name="keywords"
-        content="alta de placas edomex 2026, alta de placas cdmx, alta de placas morelos, alta de placas auto nuevo, alta foranea edomex, tramitar placas estado de mexico, gestor de placas edomex cdmx, alta de placas sin filas, primera vez placas mexico">
+        content="alta de placas edomex 2026, alta de placas cdmx, alta de placas morelos, alta de placas estado de mexico, placas edomex 2026, placas cdmx 2026, placas morelos 2026, alta foranea edomex, alta de placas moto, alta de placas auto nuevo, alta de placas auto usado, alta de placas sin filas, gestor de placas, gestor vehicular edomex, gestor vehicular cdmx, gestor vehicular morelos, gestoria placas edomex, tramitar placas estado de mexico, repuve consulta, repuve vehiculo, registro publico vehicular, verificar auto repuve, documentos alta de placas, costo alta de placas edomex 2026, primera vez placas mexico">
     <link rel="canonical" href="https://gestordeautos.com.mx/alta-de-placas.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="geo.region" content="MX">
@@ -583,7 +583,8 @@
                     todas las alcaldías de <strong>CDMX</strong>, y en <strong>Cuernavaca, Cuautla, Jiutepec</strong>
                     (Morelos). También tramitamos <strong>alta foránea</strong>, alta de moto, alta de carga y
                     <strong>reposición de placas por extravío</strong>. Más de 18 años dando servicio en la zona
-                    metropolitana. <strong>Cotización gratis por WhatsApp al 55 3575-7364.</strong></p>
+                    metropolitana. <strong>Cotización gratis por WhatsApp al 55 3575-7364.</strong>
+                </p>
                 <div style="display:flex;gap:1rem;flex-wrap:wrap;margin-top:1.25rem;">
                     <a href="cambio-de-propietario.html" style="color:#2563eb;font-weight:600;font-size:.9rem;">→ Cambio
                         de Propietario EdoMex, CDMX y Morelos</a>
