--- a/cambio-de-propietario.html
+++ b/cambio-de-propietario.html
@@ -7,11 +7,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNJCSQXF11"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-BNJCSQXF11');</script>
 
-    <title>Cambio de Propietario 2026 · EdoMex, CDMX y Morelos | Gestor de Autos</title>
+    <title>Cambio de Propietario 2026 · EdoMex, CDMX y Morelos | Gestor Vehicular · Sin Filas</title>
     <meta name="description"
-        content="Tramitamos el Cambio de Propietario en EdoMex, CDMX y Morelos en 2026. Sin filas, 100% legal. Envía tus docs por WhatsApp y recibe tu tarjeta de circulación. Llama: 55 3575-7364.">
+        content="Tramitamos el Cambio de Propietario Vehicular en EdoMex, CDMX y Morelos 2026. Gestor Vehicular Online. Traspaso rápido, sin filas, 100% legal. Tú envías docs, nosotros tramitamos. 55 3575-7364.">
     <meta name="keywords"
-        content="cambio de propietario edomex 2026, cambio de propietario cdmx, cambio de propietario morelos, traspaso vehicular edomex, cambio propietario auto usado mexico, gestor cambio propietario, endoso factura vehiculo">
+        content="cambio de propietario edomex 2026, cambio de propietario cdmx, cambio de propietario morelos, traspaso vehicular edomex, traspaso vehicular cdmx, traspaso auto usado, cambio propietario auto usado mexico, gestor cambio propietario, endoso factura vehiculo, como hacer cambio de propietario cdmx, cambio propietario sin filas, gestor vehicular edomex, gestoria vehicular edomex, gestoria vehicular cdmx, refactura vehiculo edomex, tarjeta circulacion nuevo dueno, cambio de nombre vehiculo">
     <link rel="canonical" href="https://gestordeautos.com.mx/cambio-de-propietario.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="geo.region" content="MX">
@@ -528,7 +528,8 @@
                         <h3>¿Cuánto tarda el Cambio de Propietario con un gestor?</h3>
                         <p><strong>EdoMex:</strong> 5-10 días hábiles · <strong>CDMX:</strong> 7-15 días hábiles ·
                             <strong>Morelos:</strong> 5-10 días hábiles. Depende de la agenda de la ventanilla y la
-                            correctitud de los documentos.</p>
+                            correctitud de los documentos.
+                        </p>
                     </div>
                     <div class="faq-cp-item">
                         <h3>¿Necesito que el vendedor esté presente para el Cambio de Propietario?</h3>
@@ -574,7 +575,8 @@
                     Tlalnepantla, Ecatepec, Huixquilucan, Chalco, Texcoco (EdoMex), todas las alcaldías de
                     <strong>CDMX</strong>, y Cuernavaca, Cuautla, Jiutepec (Morelos). Si compraste o vendiste un auto y
                     necesitas el traspaso legal del vehículo, somos tu gestor de confianza. <strong>Cotización gratuita
-                        vía WhatsApp.</strong></p>
+                        vía WhatsApp.</strong>
+                </p>
                 <div style="display:flex;gap:1rem;flex-wrap:wrap;margin-top:1.25rem;">
                     <a href="alta-de-placas.html" style="color:#2563eb;font-weight:600;font-size:.9rem;">→ Alta de
                         Placas EdoMex, CDMX y Morelos</a>
