--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular CDMX, EdoMex y Morelos 2026 | Alta Placas · Cambio Propietario · Licencias</title>
+    <title>Gestor Vehicular #1 CDMX, EdoMex y Morelos 2026 | Gestoría Vehicular · Placas · Licencias · Refrendo</title>
     <meta name="description"
-        content="Gestor de Autos: Gestoría Vehicular en CDMX, Estado de México y Morelos. Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente y Refrendo Morelos 2026. Sin filas. 55 3575-7364.">
+        content="Gestor de Autos: Gestoría Vehicular en CDMX, Estado de México y Morelos. Gestor Vehicular Online. Alta de Placas, Cambio de Propietario, Reemplacamiento, Licencia Permanente, Licencia Moto y Refrendo Morelos 2026. Sin filas. 55 3575-7364.">
     <meta name="keywords"
-        content="gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, alta de placas edomex, alta de placas cdmx, cambio de propietario edomex, cambio de propietario cdmx, reemplacamiento edomex 2026, licencia permanente cdmx, refrendo morelos 2026, gestor de placas, tramites vehiculares sin filas, gestor de autos">
+        content="gestor vehicular, gestoria vehicular, gestoría vehicular, gestor de autos, gestor de placas, gestoria vehicular cdmx, gestoria vehicular estado de mexico, gestoria vehicular morelos, gestoria vehicular edomex, alta de placas edomex, alta de placas cdmx, alta de placas morelos, placas estado de mexico 2026, placas cdmx 2026, placas morelos 2026, placas edomex 2026, reemplacamiento edomex 2026, cambio de propietario edomex, cambio de propietario cdmx, cambio de propietario morelos, licencia permanente cdmx, licencia permanente tipo a, licencia de moto edomex, licencia motociclista sin examen, licencia tipo c edomex, licencia tipo b moto, refrendo morelos 2026, refrendo vehicular morelos, pago refrendo morelos en linea, costo refrendo morelos 2026, alta de placas sin filas, altas vehiculares edomex, alta foranea edomex, repuve consulta, registro publico vehicular, tramites vehiculares sin filas, gestor vehicular cerca de mi, gestoría vehicular online">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -738,42 +738,90 @@
                             </div>
                         </div>
 
-                        <!-- Licencia Moto EdoMex 4 años -->
+                        <!-- 🏍️ BLOQUE: Licencias de Moto Estado de México -->
                         <div class="service-item premium-item"
-                            style="background: linear-gradient(135deg, #f0fdf4, #dcfce7); border: 2px solid #16a34a;">
-                            <div class="service-header">
-                                <div class="service-icon" style="background: #16a34a; color:white;"><i
-                                        class="fas fa-motorcycle"></i></div>
-                                <div>
-                                    <h4>Licencia de Moto &middot; EdoMex &middot; 4 A&ntilde;os</h4>
-                                    <small>Vigente &middot; Tipo B SEMOVI &middot; Sin filas</small>
+                            style="grid-column: 1 / -1; background: linear-gradient(135deg, #0f172a, #1e293b); border: 2px solid #f59e0b; padding: 2rem;">
+                            <!-- Título del bloque -->
+                            <div style="text-align:center; margin-bottom:1.5rem;">
+                                <div
+                                    style="display:inline-flex; align-items:center; gap:0.6rem; background:rgba(245,158,11,0.15); border:1px solid #f59e0b; border-radius:50px; padding:0.4rem 1.2rem; margin-bottom:0.8rem;">
+                                    <i class="fas fa-motorcycle" style="color:#f59e0b;"></i>
+                                    <span
+                                        style="color:#f59e0b; font-weight:700; font-size:0.85rem; letter-spacing:1px; text-transform:uppercase;">Estado
+                                        de México</span>
                                 </div>
+                                <h4 style="color:white; font-size:1.3rem; margin:0; font-weight:800;">
+                                    🏍️ Licencias de Motociclista EdoMex
+                                </h4>
+                                <p style="color:#94a3b8; font-size:0.85rem; margin:0.3rem 0 0;">Sin filas · Sin madrugar
+                                    · 100% Legal · Solo manda tus docs por WhatsApp</p>
                             </div>
-                            <div style="display:flex; gap:1.5rem; align-items:center; flex-wrap:wrap; margin-top:1rem;">
-                                <div style="flex-shrink:0; width:220px;">
-                                    <img src="assets/images/licencia-moto-edomex.svg"
-                                        alt="Licencia de motociclista Estado de México 4 años"
-                                        style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.12);"
-                                        loading="lazy">
-                                </div>
-                                <div style="flex:1; min-width:200px;">
+
+                            <!-- Dos mini-tarjetas lado a lado -->
+                            <div
+                                style="display:grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap:1.2rem;">
+
+                                <!-- Tipo B · 4 Años -->
+                                <div
+                                    style="background:linear-gradient(135deg,#f0fdf4,#dcfce7); border:2px solid #16a34a; border-radius:14px; padding:1.2rem;">
+                                    <div style="display:flex; align-items:center; gap:0.75rem; margin-bottom:0.8rem;">
+                                        <div
+                                            style="background:#16a34a; color:white; width:42px; height:42px; border-radius:10px; display:flex; align-items:center; justify-content:center; font-size:1.1rem; flex-shrink:0;">
+                                            <i class="fas fa-motorcycle"></i>
+                                        </div>
+                                        <div>
+                                            <strong style="color:#14532d; font-size:1rem;">Tipo B &middot; 4
+                                                Años</strong>
+                                            <div style="font-size:0.78rem; color:#16a34a; font-weight:600;">Vigente ·
+                                                SEMOVI · Sin filas</div>
+                                        </div>
+                                    </div>
                                     <div class="service-tags" style="margin-bottom:0.75rem;">
                                         <span class="tag"><i class="fas fa-motorcycle"></i> Tipo B</span>
-                                        <span class="tag"><i class="fas fa-calendar-alt"></i> 4 A&ntilde;os</span>
+                                        <span class="tag"><i class="fas fa-calendar-alt"></i> 4 Años</span>
                                         <span class="tag"><i class="fas fa-map-marker-alt"></i> EdoMex</span>
                                     </div>
-                                    <p
-                                        style="font-size:0.88rem; color:#475569; line-height:1.5; margin-bottom:0.75rem;">
-                                        Tramitamos tu <strong>licencia de motociclista en el Estado de
-                                            M&eacute;xico</strong> con vigencia de 4 a&ntilde;os. 100% legal, sin
-                                        madrugar. S&oacute;lo env&iacute;a tus docs por WhatsApp.
+                                    <p style="font-size:0.83rem; color:#475569; line-height:1.5; margin-bottom:0.9rem;">
+                                        Tramitamos tu <strong>licencia de motociclista EdoMex</strong> con vigencia de 4
+                                        años. 100% legal, sin madrugar.
                                     </p>
-                                    <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20EdoMex%204%20a%C3%B1os"
+                                    <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20EdoMex%20Tipo%20B%204%20a%C3%B1os"
                                         class="btn btn-whatsapp" target="_blank"
-                                        style="font-size:0.9rem; padding:0.6rem 1.2rem; display:inline-flex; align-items:center; gap:0.4rem;">
-                                        <i class="fab fa-whatsapp"></i> Cotizar Licencia Moto
+                                        style="font-size:0.85rem; padding:0.55rem 1rem; display:inline-flex; align-items:center; gap:0.4rem; width:100%; justify-content:center;">
+                                        <i class="fab fa-whatsapp"></i> Cotizar Tipo B
                                     </a>
                                 </div>
+
+                                <!-- Tipo C · Sin Examen -->
+                                <div
+                                    style="background:linear-gradient(135deg,#fff7ed,#ffedd5); border:2px solid #ea580c; border-radius:14px; padding:1.2rem;">
+                                    <div style="display:flex; align-items:center; gap:0.75rem; margin-bottom:0.8rem;">
+                                        <div
+                                            style="background:#ea580c; color:white; width:42px; height:42px; border-radius:10px; display:flex; align-items:center; justify-content:center; font-size:1.1rem; flex-shrink:0;">
+                                            <i class="fas fa-motorcycle"></i>
+                                        </div>
+                                        <div>
+                                            <strong style="color:#7c2d12; font-size:1rem;">Tipo C · Sin Examen</strong>
+                                            <div style="font-size:0.78rem; color:#ea580c; font-weight:700;">✔ Sin Examen
+                                                · 100% Legal</div>
+                                        </div>
+                                    </div>
+                                    <div class="service-tags" style="margin-bottom:0.75rem;">
+                                        <span class="tag"><i class="fas fa-motorcycle"></i> Tipo C</span>
+                                        <span class="tag"><i class="fas fa-ban"></i> Sin Examen</span>
+                                        <span class="tag"><i class="fas fa-map-marker-alt"></i> EdoMex</span>
+                                    </div>
+                                    <p style="font-size:0.83rem; color:#475569; line-height:1.5; margin-bottom:0.9rem;">
+                                        Tramitamos tu <strong>Licencia Tipo C en Estado de México</strong> sin que
+                                        presentes examen. Rápido y seguro.
+                                    </p>
+                                    <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20Tipo%20C%20EdoMex%20sin%20examen"
+                                        class="btn btn-whatsapp" target="_blank"
+                                        style="font-size:0.85rem; padding:0.55rem 1rem; display:inline-flex; align-items:center; gap:0.4rem; width:100%; justify-content:center; background:linear-gradient(135deg,#ea580c,#c2410c);">
+                                        <i class="fab fa-whatsapp"></i> Cotizar Tipo C
+                                    </a>
+                                </div>
+
                             </div>
                         </div>
 
@@ -784,7 +832,8 @@
                             <h4 style="color:#1e3a8a;">Licencia Permanente CDMX &middot; Tipo A</h4>
                             <p style="font-size:0.85rem; color:#475569; margin:0.4rem 0 1rem;">La que tramitas
                                 <strong>una sola vez para toda la vida</strong>. Sin fecha de vencimiento. V&aacute;lida
-                                en toda la Rep&uacute;blica.</p>
+                                en toda la Rep&uacute;blica.
+                            </p>
                             <a href="licencia-permanente-cdmx.html" class="btn btn-primary"
                                 style="font-size:0.9rem; padding:0.6rem 1.4rem;">
                                 <i class="fas fa-arrow-right"></i> Ver Requisitos y Cotizar
