--- a/tramites-edomex.html
+++ b/tramites-edomex.html
@@ -16,11 +16,11 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría Vehicular Estado de México | Placas y Reemplacamiento 2026</title>
+    <title>Gestoría Vehicular Estado de México 2026 | Placas EdoMex · Reemplacamiento · Gestor Vehicular</title>
     <meta name="description"
-        content="Gestoría Vehicular en el Estado de México. Realizamos Reemplacamiento 2026, Alta de Placas, Bajas y Cambio de Propietario Urgente. Cobertura en Naucalpan, Tlalnepantla, Chalco y más.">
+        content="Gestor Vehicular en Estado de México 2026. Reemplacamiento EdoMex, Alta de Placas, Cambio de Propietario y Licencias de Moto sin filas. Servicio en Naucalpan, Tlalnepantla, Ecatepec, Chalco y todo EdoMex. 55 3575-7364.">
     <meta name="keywords"
-        content="gestoria vehicular estado de mexico, gestoria vehicular edomex, reemplacamiento edomex 2026, placas edomex, gestoria en naucalpan, gestoria en tlalnepantla, gestoria en chalco, gestor de placas, alta de placas edomex, cambio de propietario edomex">
+        content="gestor vehicular estado de mexico, gestoria vehicular edomex, gestoria vehicular estado de mexico, gestoría vehicular edomex, reemplacamiento edomex 2026, placas edomex 2026, placas estado de mexico 2026, alta de placas edomex, alta foranea edomex, cambio de propietario edomex, baja de placas edomex, licencia moto edomex, licencia tipo c sin examen edomex, renovacion placas edomex, gestor de placas edomex, gestor en naucalpan, gestor en tlalnepantla, gestor en ecatepec, gestor en chalco, gestor en huixquilucan, requisitos reemplacamiento edomex 2026, costo placas edomex 2026, tramites vehiculares edomex sin filas">
     <link rel="canonical" href="https://gestordeautos.com.mx/tramites-edomex.html">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
