--- a/index.html
+++ b/index.html
@@ -840,6 +840,37 @@
                             </a>
                         </div>
 
+                        <!-- Licencia Moto Tipo C EdoMex -->
+                        <div class="service-item premium-item"
+                            style="background:linear-gradient(135deg,#fff7ed,#ffedd5); border:2px solid #ea580c; text-align:center;">
+                            <div
+                                style="display:inline-flex;align-items:center;gap:0.5rem;background:rgba(234,88,12,0.12);border:1px solid #ea580c;border-radius:50px;padding:0.3rem 1rem;margin-bottom:0.6rem;">
+                                <i class="fas fa-motorcycle" style="color:#ea580c;font-size:0.85rem;"></i>
+                                <span
+                                    style="color:#ea580c;font-weight:700;font-size:0.78rem;letter-spacing:1px;text-transform:uppercase;">Estado
+                                    de México</span>
+                            </div>
+                            <i class="fas fa-motorcycle"
+                                style="font-size:2rem; color:#ea580c; margin-bottom:0.4rem; display:block;"></i>
+                            <h4 style="color:#7c2d12;">Licencia de Moto &middot; Tipo C &middot; EdoMex</h4>
+                            <p style="font-size:0.82rem; color:#ea580c; font-weight:700; margin:0.2rem 0 0.5rem;">
+                                &#10004; Sin Examen &middot; 100% Legal</p>
+                            <div class="service-tags" style="justify-content:center; margin-bottom:0.75rem;">
+                                <span class="tag"><i class="fas fa-motorcycle"></i> Tipo C</span>
+                                <span class="tag"><i class="fas fa-ban"></i> Sin Examen</span>
+                                <span class="tag"><i class="fas fa-map-marker-alt"></i> EdoMex</span>
+                                <span class="tag"><i class="fas fa-shield-alt"></i> Legal</span>
+                            </div>
+                            <p style="font-size:0.85rem; color:#475569; margin:0 0 1rem;">Tramitamos tu <strong>Licencia
+                                    Motociclista Tipo C en Estado de México</strong> sin que presentes examen. Rápido,
+                                seguro y sin filas.</p>
+                            <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20Tipo%20C%20EdoMex%20sin%20examen"
+                                class="btn btn-whatsapp" target="_blank"
+                                style="font-size:0.9rem;padding:0.6rem 1.4rem;display:inline-flex;align-items:center;gap:0.4rem;background:linear-gradient(135deg,#ea580c,#c2410c);">
+                                <i class="fab fa-whatsapp"></i> Cotizar Licencia Tipo C
+                            </a>
+                        </div>
+
                     </div>
                 </div>
 
